[OLC2]Proyecto2_201603127/Analisis/Ascendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> etiqueta_main
Rule 5     instruccion -> etiqueta_ID
Rule 6     instruccion -> asignacion
Rule 7     instruccion -> inst_goto
Rule 8     instruccion -> inst_if
Rule 9     instruccion -> inst_print
Rule 10    instruccion -> inst_exit
Rule 11    instruccion -> inst_unset
Rule 12    etiqueta_main -> MAIN DOSPUNTOS
Rule 13    etiqueta_ID -> ID DOSPUNTOS
Rule 14    asignacion -> variables IGUAL operaciones PUNTOCOMA
Rule 15    asignacion -> variables_array IGUAL operaciones PUNTOCOMA
Rule 16    inst_goto -> GOTO ID PUNTOCOMA
Rule 17    inst_if -> IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
Rule 18    inst_print -> PRINT PARENTA variables PARENTC PUNTOCOMA
Rule 19    inst_print -> PRINT PARENTA val PARENTC PUNTOCOMA
Rule 20    inst_unset -> UNSET PARENTA variables PARENTC PUNTOCOMA
Rule 21    inst_exit -> EXIT PUNTOCOMA
Rule 22    operaciones -> val MAS val
Rule 23    operaciones -> val MENOS val
Rule 24    operaciones -> val POR val
Rule 25    operaciones -> val DIVICION val
Rule 26    operaciones -> val RESIDUO val
Rule 27    operaciones -> val AND1 val
Rule 28    operaciones -> val OR1 val
Rule 29    operaciones -> val XOR val
Rule 30    operaciones -> val AND2 val
Rule 31    operaciones -> val OR2 val
Rule 32    operaciones -> val XOR2 val
Rule 33    operaciones -> val SHIFTI val
Rule 34    operaciones -> val SHIFTD val
Rule 35    operaciones -> val IGUALIGUAL val
Rule 36    operaciones -> val DIFERENTE val
Rule 37    operaciones -> val MAYORIGUAL val
Rule 38    operaciones -> val MENORIGUAL val
Rule 39    operaciones -> val MAYOR val
Rule 40    operaciones -> val MENOR val
Rule 41    operaciones -> MENOS val
Rule 42    operaciones -> EXCLAMA val
Rule 43    operaciones -> NOT val
Rule 44    operaciones -> ABS PARENTA val PARENTC
Rule 45    operaciones -> READ PARENTA PARENTC
Rule 46    operaciones -> ARRAY PARENTA PARENTC
Rule 47    operaciones -> val
Rule 48    val -> conversiones
Rule 49    val -> ENTERO
Rule 50    val -> DECIMAL
Rule 51    val -> CADENA
Rule 52    val -> variables
Rule 53    val -> variables_array
Rule 54    variables -> TEMPORALES
Rule 55    variables -> PARAMETROS
Rule 56    variables -> VALORES_DEVUELTOS
Rule 57    variables -> SIMULADO
Rule 58    variables -> PILA
Rule 59    variables -> PUNTERO_PILA
Rule 60    variables_array -> TEMPORALES indices
Rule 61    variables_array -> PARAMETROS indices
Rule 62    variables_array -> VALORES_DEVUELTOS indices
Rule 63    variables_array -> SIMULADO indices
Rule 64    variables_array -> PILA indices
Rule 65    variables_array -> PUNTERO_PILA indices
Rule 66    indices -> indices indice
Rule 67    indices -> indice
Rule 68    indice -> CORCHEA val CORCHEC
Rule 69    conversiones -> PARENTA INT PARENTC val
Rule 70    conversiones -> PARENTA FLOAT PARENTC val
Rule 71    conversiones -> PARENTA CHAR PARENTC val

Terminals, with rules where they appear

ABS                  : 44
AND1                 : 27
AND2                 : 30
ARRAY                : 46
CADENA               : 51
CHAR                 : 71
CORCHEA              : 68
CORCHEC              : 68
DECIMAL              : 50
DIFERENTE            : 36
DIVICION             : 25
DOSPUNTOS            : 12 13
ENTERO               : 49
EXCLAMA              : 42
EXIT                 : 21
FLOAT                : 70
GOTO                 : 16 17
ID                   : 13 16 17
IF                   : 17
IGUAL                : 14 15
IGUALIGUAL           : 35
INT                  : 69
MAIN                 : 12
MAS                  : 22
MAYOR                : 39
MAYORIGUAL           : 37
MENOR                : 40
MENORIGUAL           : 38
MENOS                : 23 41
NOT                  : 43
OR1                  : 28
OR2                  : 31
PARAMETROS           : 55 61
PARENTA              : 17 18 19 20 44 45 46 69 70 71
PARENTC              : 17 18 19 20 44 45 46 69 70 71
PILA                 : 58 64
POR                  : 24
PRINT                : 18 19
PUNTERO_PILA         : 59 65
PUNTOCOMA            : 14 15 16 17 18 19 20 21
READ                 : 45
RESIDUO              : 26
SHIFTD               : 34
SHIFTI               : 33
SIMULADO             : 57 63
TEMPORALES           : 54 60
UNSET                : 20
VALORES_DEVUELTOS    : 56 62
XOR                  : 29
XOR2                 : 32
error                : 

Nonterminals, with rules where they appear

asignacion           : 6
conversiones         : 48
etiqueta_ID          : 5
etiqueta_main        : 4
indice               : 66 67
indices              : 60 61 62 63 64 65 66
inicio               : 0
inst_exit            : 10
inst_goto            : 7
inst_if              : 8
inst_print           : 9
inst_unset           : 11
instruccion          : 2 3
instrucciones        : 1 2
operaciones          : 14 15 17
val                  : 19 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 43 44 47 68 69 70 71
variables            : 14 18 20 52
variables_array      : 15 53

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . etiqueta_main
    (5) instruccion -> . etiqueta_ID
    (6) instruccion -> . asignacion
    (7) instruccion -> . inst_goto
    (8) instruccion -> . inst_if
    (9) instruccion -> . inst_print
    (10) instruccion -> . inst_exit
    (11) instruccion -> . inst_unset
    (12) etiqueta_main -> . MAIN DOSPUNTOS
    (13) etiqueta_ID -> . ID DOSPUNTOS
    (14) asignacion -> . variables IGUAL operaciones PUNTOCOMA
    (15) asignacion -> . variables_array IGUAL operaciones PUNTOCOMA
    (16) inst_goto -> . GOTO ID PUNTOCOMA
    (17) inst_if -> . IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
    (18) inst_print -> . PRINT PARENTA variables PARENTC PUNTOCOMA
    (19) inst_print -> . PRINT PARENTA val PARENTC PUNTOCOMA
    (21) inst_exit -> . EXIT PUNTOCOMA
    (20) inst_unset -> . UNSET PARENTA variables PARENTC PUNTOCOMA
    (54) variables -> . TEMPORALES
    (55) variables -> . PARAMETROS
    (56) variables -> . VALORES_DEVUELTOS
    (57) variables -> . SIMULADO
    (58) variables -> . PILA
    (59) variables -> . PUNTERO_PILA
    (60) variables_array -> . TEMPORALES indices
    (61) variables_array -> . PARAMETROS indices
    (62) variables_array -> . VALORES_DEVUELTOS indices
    (63) variables_array -> . SIMULADO indices
    (64) variables_array -> . PILA indices
    (65) variables_array -> . PUNTERO_PILA indices

    MAIN            shift and go to state 12
    ID              shift and go to state 13
    GOTO            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    EXIT            shift and go to state 19
    UNSET           shift and go to state 20
    TEMPORALES      shift and go to state 21
    PARAMETROS      shift and go to state 22
    VALORES_DEVUELTOS shift and go to state 23
    SIMULADO        shift and go to state 24
    PILA            shift and go to state 25
    PUNTERO_PILA    shift and go to state 26

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    etiqueta_main                  shift and go to state 4
    etiqueta_ID                    shift and go to state 5
    asignacion                     shift and go to state 6
    inst_goto                      shift and go to state 7
    inst_if                        shift and go to state 8
    inst_print                     shift and go to state 9
    inst_exit                      shift and go to state 10
    inst_unset                     shift and go to state 11
    variables                      shift and go to state 14
    variables_array                shift and go to state 15

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . etiqueta_main
    (5) instruccion -> . etiqueta_ID
    (6) instruccion -> . asignacion
    (7) instruccion -> . inst_goto
    (8) instruccion -> . inst_if
    (9) instruccion -> . inst_print
    (10) instruccion -> . inst_exit
    (11) instruccion -> . inst_unset
    (12) etiqueta_main -> . MAIN DOSPUNTOS
    (13) etiqueta_ID -> . ID DOSPUNTOS
    (14) asignacion -> . variables IGUAL operaciones PUNTOCOMA
    (15) asignacion -> . variables_array IGUAL operaciones PUNTOCOMA
    (16) inst_goto -> . GOTO ID PUNTOCOMA
    (17) inst_if -> . IF PARENTA operaciones PARENTC GOTO ID PUNTOCOMA
    (18) inst_print -> . PRINT PARENTA variables PARENTC PUNTOCOMA
    (19) inst_print -> . PRINT PARENTA val PARENTC PUNTOCOMA
    (21) inst_exit -> . EXIT PUNTOCOMA
    (20) inst_unset -> . UNSET PARENTA variables PARENTC PUNTOCOMA
    (54) variables -> . TEMPORALES
    (55) variables -> . PARAMETROS
    (56) variables -> . VALORES_DEVUELTOS
    (57) variables -> . SIMULADO
    (58) variables -> . PILA
    (59) variables -> . PUNTERO_PILA
    (60) variables_array -> . TEMPORALES indices
    (61) variables_array -> . PARAMETROS indices
    (62) variables_array -> . VALORES_DEVUELTOS indices
    (63) variables_array -> . SIMULADO indices
    (64) variables_array -> . PILA indices
    (65) variables_array -> . PUNTERO_PILA indices

    $end            reduce using rule 1 (inicio -> instrucciones .)
    MAIN            shift and go to state 12
    ID              shift and go to state 13
    GOTO            shift and go to state 16
    IF              shift and go to state 17
    PRINT           shift and go to state 18
    EXIT            shift and go to state 19
    UNSET           shift and go to state 20
    TEMPORALES      shift and go to state 21
    PARAMETROS      shift and go to state 22
    VALORES_DEVUELTOS shift and go to state 23
    SIMULADO        shift and go to state 24
    PILA            shift and go to state 25
    PUNTERO_PILA    shift and go to state 26

    instruccion                    shift and go to state 27
    etiqueta_main                  shift and go to state 4
    etiqueta_ID                    shift and go to state 5
    asignacion                     shift and go to state 6
    inst_goto                      shift and go to state 7
    inst_if                        shift and go to state 8
    inst_print                     shift and go to state 9
    inst_exit                      shift and go to state 10
    inst_unset                     shift and go to state 11
    variables                      shift and go to state 14
    variables_array                shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    MAIN            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    GOTO            reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    EXIT            reduce using rule 3 (instrucciones -> instruccion .)
    UNSET           reduce using rule 3 (instrucciones -> instruccion .)
    TEMPORALES      reduce using rule 3 (instrucciones -> instruccion .)
    PARAMETROS      reduce using rule 3 (instrucciones -> instruccion .)
    VALORES_DEVUELTOS reduce using rule 3 (instrucciones -> instruccion .)
    SIMULADO        reduce using rule 3 (instrucciones -> instruccion .)
    PILA            reduce using rule 3 (instrucciones -> instruccion .)
    PUNTERO_PILA    reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> etiqueta_main .

    MAIN            reduce using rule 4 (instruccion -> etiqueta_main .)
    ID              reduce using rule 4 (instruccion -> etiqueta_main .)
    GOTO            reduce using rule 4 (instruccion -> etiqueta_main .)
    IF              reduce using rule 4 (instruccion -> etiqueta_main .)
    PRINT           reduce using rule 4 (instruccion -> etiqueta_main .)
    EXIT            reduce using rule 4 (instruccion -> etiqueta_main .)
    UNSET           reduce using rule 4 (instruccion -> etiqueta_main .)
    TEMPORALES      reduce using rule 4 (instruccion -> etiqueta_main .)
    PARAMETROS      reduce using rule 4 (instruccion -> etiqueta_main .)
    VALORES_DEVUELTOS reduce using rule 4 (instruccion -> etiqueta_main .)
    SIMULADO        reduce using rule 4 (instruccion -> etiqueta_main .)
    PILA            reduce using rule 4 (instruccion -> etiqueta_main .)
    PUNTERO_PILA    reduce using rule 4 (instruccion -> etiqueta_main .)
    $end            reduce using rule 4 (instruccion -> etiqueta_main .)


state 5

    (5) instruccion -> etiqueta_ID .

    MAIN            reduce using rule 5 (instruccion -> etiqueta_ID .)
    ID              reduce using rule 5 (instruccion -> etiqueta_ID .)
    GOTO            reduce using rule 5 (instruccion -> etiqueta_ID .)
    IF              reduce using rule 5 (instruccion -> etiqueta_ID .)
    PRINT           reduce using rule 5 (instruccion -> etiqueta_ID .)
    EXIT            reduce using rule 5 (instruccion -> etiqueta_ID .)
    UNSET           reduce using rule 5 (instruccion -> etiqueta_ID .)
    TEMPORALES      reduce using rule 5 (instruccion -> etiqueta_ID .)
    PARAMETROS      reduce using rule 5 (instruccion -> etiqueta_ID .)
    VALORES_DEVUELTOS reduce using rule 5 (instruccion -> etiqueta_ID .)
    SIMULADO        reduce using rule 5 (instruccion -> etiqueta_ID .)
    PILA            reduce using rule 5 (instruccion -> etiqueta_ID .)
    PUNTERO_PILA    reduce using rule 5 (instruccion -> etiqueta_ID .)
    $end            reduce using rule 5 (instruccion -> etiqueta_ID .)


state 6

    (6) instruccion -> asignacion .

    MAIN            reduce using rule 6 (instruccion -> asignacion .)
    ID              reduce using rule 6 (instruccion -> asignacion .)
    GOTO            reduce using rule 6 (instruccion -> asignacion .)
    IF              reduce using rule 6 (instruccion -> asignacion .)
    PRINT           reduce using rule 6 (instruccion -> asignacion .)
    EXIT            reduce using rule 6 (instruccion -> asignacion .)
    UNSET           reduce using rule 6 (instruccion -> asignacion .)
    TEMPORALES      reduce using rule 6 (instruccion -> asignacion .)
    PARAMETROS      reduce using rule 6 (instruccion -> asignacion .)
    VALORES_DEVUELTOS reduce using rule 6 (instruccion -> asignacion .)
    SIMULADO        reduce using rule 6 (instruccion -> asignacion .)
    PILA            reduce using rule 6 (instruccion -> asignacion .)
    PUNTERO_PILA    reduce using rule 6 (instruccion -> asignacion .)
    $end            reduce using rule 6 (instruccion -> asignacion .)


state 7

    (7) instruccion -> inst_goto .

    MAIN            reduce using rule 7 (instruccion -> inst_goto .)
    ID              reduce using rule 7 (instruccion -> inst_goto .)
    GOTO            reduce using rule 7 (instruccion -> inst_goto .)
    IF              reduce using rule 7 (instruccion -> inst_goto .)
    PRINT           reduce using rule 7 (instruccion -> inst_goto .)
    EXIT            reduce using rule 7 (instruccion -> inst_goto .)
    UNSET           reduce using rule 7 (instruccion -> inst_goto .)
    TEMPORALES      reduce using rule 7 (instruccion -> inst_goto .)
    PARAMETROS      reduce using rule 7 (instruccion -> inst_goto .)
    VALORES_DEVUELTOS reduce using rule 7 (instruccion -> inst_goto .)
    SIMULADO        reduce using rule 7 (instruccion -> inst_goto .)
    PILA            reduce using rule 7 (instruccion -> inst_goto .)
    PUNTERO_PILA    reduce using rule 7 (instruccion -> inst_goto .)
    $end            reduce using rule 7 (instruccion -> inst_goto .)


state 8

    (8) instruccion -> inst_if .
